disable cache_manifest in webpacker.yml

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -90,7 +90,7 @@ production:
   extract_css: true
 
   # Cache manifest.json for performance
-  cache_manifest: true
+  # cache_manifest: true
 
 
 staging:
@@ -103,4 +103,4 @@ staging:
   extract_css: true
 
   # Cache manifest.json for performance
-  cache_manifest: true
+  # cache_manifest: true
