--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "@toast-ui/editor": "^3.1.8",
     "bootstrap": "3.4.1",
     "jquery": "3.4.1",
     "turbolinks": "^5.2.0",
