--- a/package.json
+++ b/package.json
@@ -2,21 +2,31 @@
   "name": "portcurio",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.5",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "@toast-ui/editor": "^3.1.8",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "3.4.1",
     "jquery": "^3.6.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "turbolinks": "^5.2.0",
+    "typescript": "^5.0.4",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpacker-pwa": "^0.1.2"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@types/node": "^18.16.3",
     "webpack-dev-server": "^3"
   }
 }
