--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,22 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": ["es6", "dom"],
-    "module": "es6",
+    "module": "ESNext",
     "moduleResolution": "node",
     "sourceMap": true,
     "target": "es6",
-    "jsx": "react",
+    "jsx": "preserve",
+    "jsxFactory": "h",
+    "jsxFragmentFactory": "Fragment",
+    "jsxImportSource": "preact",
+    "esModuleInterop": true,
     "noEmit": true,
+    "skipLibCheck": true,
+    "baseUrl": "./",
+    "paths": {
+      "react": ["./node_modules/preact/compat/"],
+      "react-dom": ["./node_modules/preact/compat/"]
+    }
   },
   "exclude": [
     "**/*.spec.ts",
