--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "portcurio",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@preact/signals": "^1.1.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -15,6 +17,8 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "3.4.1",
     "jquery": "^3.6.0",
+    "preact": "^10.13.2",
+    "preact-compat": "^3.19.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
