--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.6.0",
     "preact": "^10.13.2",
     "preact-compat": "^3.19.0",
+    "preact-router": "^4.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
